// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`traverse can transform css decl to styled-components transform variable decl 1`] = `"const color = \\"black\\";"`;

exports[`traverse can transform css rule to styled-components keyframes 1`] = `
"const Anim = keyframes\`
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
\`;"
`;

exports[`traverse can transform css rule to styled-components nested rules 1`] = `
"const Container = styled.div\`
  background-color: rgba(0, 0, 0, 0.86);
  color: rgb(255, 255, 255);
  &:hover {
    background-color: rgba(0, 0, 0, 0.74);
    color: \${whiteAlpha500};
  }
  span.message {
    font-weight: 400;
    p {
      color: rgba(0, 0, 0, 0.56);
      b {
        font-weight: 600;
        color: rgba(0, 0, 0, 0.74);
      }
      i {
        font-weight: 400;
        color: rgba(0, 0, 0, 0.74);
        text-decoration: underline;
      }
    }
  }
\`;"
`;

exports[`traverse can transform css rule to styled-components with element 1`] = `
"const Message = styled.p\`
  background-color: rgba(0, 0, 0, 0.86);
  color: rgb(255, 255, 255);
\`;"
`;

exports[`traverse can transform css rule to styled-components with no element 1`] = `
"const Klass = styled.div\`
  background-color: rgba(0, 0, 0, 0.86);
  color: rgb(255, 255, 255);
\`;"
`;
